<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="swipe_left">Nothing yet</string>
    <string name="label_all_bills">All bills</string>
    <string name="action_create_bill">New bill</string>
    <string name="action_settings">App settings</string>
    <string name="action_projects">Projects</string>
    <string name="action_scan_qrcode">Scan QRCode from Cosmic Money</string>
    <string name="action_add_project">Add project</string>
    <string name="action_save_bill">Save bill</string>
    <string name="action_edit_project">Edit project</string>
    <string name="action_manage_project">Manage project</string>
    <string name="action_share_project">Share project</string>
    <string name="mandatory">(mandatory)</string>
    <string name="setting_what">What?</string>
    <string name="setting_what_long">Paid for what?</string>
    <string name="setting_date">When was it?</string>
    <string name="setting_time">What time was it?</string>
    <string name="setting_date_long">The day it was paid</string>
    <string name="setting_payer">Who paid?</string>
    <string name="setting_all">All</string>
    <string name="setting_none">None</string>
    <string name="save_or_discard_bill_dialog_title">Bill edition</string>
    <string name="save_or_discard_bill_dialog_message">Bill values have been changed. What do you want to do?</string>
    <string name="save_or_discard_bill_dialog_save">Save</string>
    <string name="save_or_discard_bill_dialog_discard">Discard</string>
    <string name="currency_manager">Currency manager</string>
    <string name="add_currency_title">Add currency</string>
    <string name="currency_management_unavailable">Currency management is only available for Cospend projects</string>
    <string name="setting_comment">Comment</string>
    <string name="duplicate_bill">Duplicate bill</string>
    <string name="currency_dialog_title">Convert current amount from another currency into %s</string>
    <string name="no_currency_error">There is no additional currency</string>
    <string name="main_currency">Main currency</string>
    <string name="no_main_currency">Main currency must be set before adding others</string>
    <string name="currency_edit_name">Name</string>
    <string name="currency_rate">Exchange rate</string>
    <string name="bill_deletion_is_disabled">Bill deletion is disabled for this project</string>
    <string name="setting_amount">How much?</string>
    <string name="setting_amount_long">How much did it cost?</string>
    <string name="setting_owers">For whom?</string>
    <string name="setting_project_id">Project ID/name</string>
    <string name="setting_project_type">Project type</string>
    <string name="setting_project_repetition">Repeat this bill every</string>
    <string name="setting_payment_mode">Payment mode</string>
    <string name="setting_category">Category</string>
    <string name="empty_action_dialog_title">What do you want to do?</string>
    <string name="repeat_no">do not repeat</string>
    <string name="repeat_day">day</string>
    <string name="repeat_week">week</string>
    <string name="repeat_month">month</string>
    <string name="repeat_year">year</string>
    <string name="payment_mode_none">No payment mode</string>
    <string name="payment_mode_all">All payment modes</string>
    <string name="payment_mode_credit_card">Credit card</string>
    <string name="payment_mode_cash">Cash</string>
    <string name="payment_mode_check">Check</string>
    <string name="payment_mode_online">Online service</string>
    <string name="payment_mode_transfer">Transfer</string>
    <string name="category_none">No category</string>
    <string name="category_all">All categories</string>
    <string name="category_all_except_reimbursement">All except reimbursement</string>
    <string name="category_groceries">Grocery</string>
    <string name="category_leisure">Bar/Party</string>
    <string name="category_rent">Rent</string>
    <string name="category_bills">Bill</string>
    <string name="category_excursion">Excursion/Culture</string>
    <string name="category_health">Health</string>
    <string name="category_shopping">Shopping</string>
    <string name="category_reimbursement">Reimbursement</string>
    <string name="category_restaurant">Restaurant</string>
    <string name="category_accomodation">Accommodation</string>
    <string name="category_transport">Transport</string>
    <string name="category_sport">Sport</string>
    <string name="project_type_local">Local project</string>
    <string name="project_type_ilovemoney">ILoveMoney project</string>
    <string name="project_type_nextcloud_cospend">Nextcloud Cospend project</string>
    <string name="new_project_what_todo">What do you want to do?</string>
    <string name="new_project_where">Where?</string>
    <string name="where_local">Just my phone (local)</string>
    <string name="where_ihm">ILoveMoney server</string>
    <string name="where_cospend">Cospend Nextcloud app</string>
    <string name="where_local_short">Local</string>
    <string name="where_ihm_short">ILoveMoney</string>
    <string name="where_cospend_short">Cospend</string>
    <string name="new_project_scan">Scan a Cosmic Money QRCode</string>
    <string name="todo_join">Join an existing project</string>
    <string name="todo_join_label">Join</string>
    <string name="todo_create_label">Create</string>
    <string name="todo_create">Create a project</string>
    <string name="setting_ihm_project_url_long">Address of ILoveMoney instance hosting the project (or full invitation link)</string>
    <string name="setting_ihm_project_url">ILoveMoney address (or invitation link)</string>
    <string name="setting_cospend_project_url_long">Address of Nextcloud instance hosting the Cospend project</string>
    <string name="setting_cospend_project_url">Nextcloud Cospend address</string>
    <string name="setting_project_name">Project title (remote)</string>
    <string name="setting_project_name_long">Displayed in user interface</string>
    <string name="setting_password_long">Password you use to connect to the project</string>
    <string name="setting_password">Password (local)</string>
    <string name="setting_new_project_password">Password</string>
    <string name="action_search">Search</string>
    <string name="fab_add_member">Add a member</string>
    <string name="fab_manage_members">Manage members</string>
    <string name="fab_export_project">Export project</string>
    <string name="member_edit_toggle">Activated</string>
    <string name="member_edit_name">Name</string>
    <string name="member_edit_color">Color</string>
    <string name="member_edit_weight">Weight</string>
    <string name="member_edit_delete">Delete member</string>
    <string name="member_edit_delete_cannot_delete">Member cannot be deleted because it is part of some bills.</string>
    <string name="settings_appearance_category">Appearance</string>
    <string name="settings_network_category">Network</string>
    <string name="settings_sync_category">Synchronisation</string>
    <string name="settings_other_category">Other</string>
    <string name="settings_about">About Cosmic Money</string>
    <string name="settings_server_settings">Nextcloud account</string>
    <string name="settings_night_mode_title">Theme</string>
    <string name="settings_offline_mode_title">Offline mode</string>
    <string name="settings_offline_mode_summary">Do not automatically sync. Only sync when user asks.</string>
    <string name="settings_show_nextcloud_settings_summary">Disable this if you don\'t use Nextcloud and Cospend and just want to create/join ILoveMoney and local projects.</string>
    <string name="settings_show_nextcloud_settings_title">Show Nextcloud settings</string>
    <string name="settings_color_title">App main color</string>
    <string name="settings_color_summary">Color for action bars, map buttons etc...</string>
    <string name="settings_cert_category">Manage certificates</string>
    <string name="settings_cert_trust_system">Trust system certificates</string>
    <string name="settings_cert_trust_system_on">System and user-added CAs will be trusted (recommended)</string>
    <string name="settings_cert_trust_system_off">System and user-added CAs won\'t be trusted</string>
    <string name="settings_cert_reset">Reset (un)trusted certificates</string>
    <string name="settings_cert_reset_summary">Resets trust of all custom certificates</string>
    <string name="settings_use_server_color_title">Use server color</string>
    <string name="settings_use_server_color_subtitle">Get server color when syncing and use it as main app color</string>
    <string name="settings_periodical_sync_summary">Synchronize all projects periodically</string>
    <string name="settings_periodical_sync_title">Background sync</string>
    <string name="settings_sync_interval_long">How often is the background sync triggered (minutes)</string>
    <string name="settings_sync_interval_title">Background sync interval</string>
    <string name="settings_autostart_title">Start on boot</string>
    <string name="settings_autostart_summary">Start periodical sync service on boot</string>
    <string name="settings_notify_new">Notification on bill creations</string>
    <string name="settings_notify_updated">Notification on bill changes</string>
    <string name="settings_notify_deleted">Notification on bill deletions</string>
    <string name="fab_statistics">Project\'s statistics</string>
    <string name="fab_settle">Settle</string>
    <string name="manage_accounts">Manage accounts</string>
    <string name="no_projects_title">No Projects</string>
    <string name="no_projects_text">You don\'t have any projects yet. If you have Cospend installed on a Nextcloud server, you can configure your Nextcloud account. Alternatively, you can manually add projects.</string>
    <string name="configure_account_choice">Configure Nextcloud account</string>
    <string name="add_project_choice">Manually add a project (ILoveMoney, Cospend or local)</string>
    <string name="no_members_title">No Members</string>
    <string name="no_members_text">This project doesn\'t have any members. In order to create bills, you need to add at least one member (better two or more).</string>
    <string name="no_bills_title">No Bills</string>
    <string name="no_bills_text">This project doesn\'t have any bills. Click the button below to add your first bill.</string>
    <string name="pref_key_certs" translatable="false">certificates</string>
    <string name="pref_key_trust_system_certs" translatable="false">trustSystemCerts</string>
    <string name="pref_key_reset_trust" translatable="false">resetTrust</string>
    <string name="pref_key_night_mode" translatable="false">nightMode</string>
    <string name="pref_key_color" translatable="false">appColor</string>
    <string name="pref_key_use_server_color" translatable="false">useServerColor</string>
    <string name="pref_key_offline_mode" translatable="false">offlineMode</string>
    <string name="pref_key_show_nextcloud_settings" translatable="false">showNextcloudSettings</string>
    <string name="pref_key_nextcloud_account_settings" translatable="false">nextcloudAccountSettings</string>
    <string name="pref_key_autostart" translatable="false">autostart</string>
    <string name="pref_key_periodical_sync" translatable="false">periodicalSync</string>
    <string name="pref_key_sync_interval" translatable="false">syncInterval</string>
    <string name="pref_key_notify_new" translatable="false">notifNew</string>
    <string name="pref_key_notify_updated" translatable="false">notifUpdated</string>
    <string name="pref_key_notify_deleted" translatable="false">notifDeleted</string>
    <string name="pref_value_night_mode_system" translatable="false">-1</string>
    <string name="fab_manage_currencies">Manage currencies</string>
</resources>