<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/bg_normal"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/billsListActivityActionBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/ic_arrow_back_grey600_24dp"
                app:titleMarginStart="0dp"
                tools:title="@string/app_name">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </androidx.appcompat.widget.Toolbar>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/home_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacer_2x"
                android:layout_marginTop="@dimen/spacer_1hx"
                android:layout_marginEnd="@dimen/spacer_2x"
                android:layout_marginBottom="@dimen/spacer_1hx"
                app:cardBackgroundColor="@color/appbar"
                app:cardCornerRadius="@dimen/spacer_6x"
                app:cardElevation="2dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/menu_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:padding="@dimen/spacer_2x"
                        android:tint="?attr/colorAccent"
                        app:srcCompat="@drawable/ic_baseline_menu_24" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/search_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/spacer_1x"
                        android:layout_weight="1"
                        android:textColor="@color/fg_default"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:lines="1"
                        android:textSize="16sp"
                        android:text="@string/action_search" />

                        <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/launchAccountSwitcher"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_gravity="center_vertical|end"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:padding="12dp"
                        android:tooltipText="@string/manage_accounts"
                        app:srcCompat="@drawable/ic_account_circle_grey_24dp"
                        tools:targetApi="o" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_normal">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipe_refresh_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="net.eneiluj.moneybuster.android.activity.BillsListViewActivity"
                tools:ignore="MergeRootFrame"
                tools:visibility="visible">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_bill_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_normal"
                    android:scrollbars="vertical"
                    tools:listitem="@layout/fragment_bills_list_bill_item" />

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            <!-- No projects help -->
            <LinearLayout
                android:id="@+id/layout_no_projects"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacer_3x"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="gone">

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_projects_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacer_1x"
                    android:text="@string/no_projects_text" />

                <Button
                    android:id="@+id/button_no_projects_configure_nextcloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacer_1x"
                    android:text="@string/configure_account_choice" />

                <Button
                    android:id="@+id/button_no_projects_configure_manually"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacer_1x"
                    android:text="@string/add_project_choice" />
            </LinearLayout>

            <!-- No members help -->
            <LinearLayout
                android:id="@+id/layout_no_project_members"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacer_3x"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="gone">

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_members_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacer_1x"
                    android:text="@string/no_members_text" />

                <Button
                    android:id="@+id/button_no_members_add_member"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacer_1x"
                    android:text="@string/fab_add_member" />
            </LinearLayout>

            <!-- No bills help -->
            <LinearLayout
                android:id="@+id/layout_no_bills"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacer_3x"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="gone">

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_bills_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacer_1x"
                    android:text="@string/no_bills_text" />
            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_bill"
        style="@style/Fab"
        android:src="@drawable/ic_add_dollar_24dp"
        android:tint="#ffffff"
        android:tooltipText="@string/action_create_bill"
        android:contentDescription="@string/action_create_bill"
        app:backgroundTint="@color/primary"
        app:rippleColor="@color/primary_dark" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>