<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"

    android:gravity="center_vertical"
    android:orientation="vertical"
    android:theme="@style/AppThemeDialog"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/infoLastLocLayout"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/memberNameIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="9dp"
            android:paddingRight="5dp"
            android:src="@drawable/ic_person_grey_24dp" />

        <TextView
            android:id="@+id/editMemberNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/member_edit_name" />

        <EditText
            android:id="@+id/editMemberName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/weightLayout"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/weightIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="9dp"
            android:paddingRight="5dp"
            android:src="@drawable/ic_line_weight_grey_24dp" />

        <TextView
            android:id="@+id/editMemberWeightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/member_edit_weight" />

        <EditText
            android:id="@+id/editMemberWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:digits="0123456789.," />

    </LinearLayout>


    <LinearLayout
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/editMemberActivated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:theme="@style/checkboxTheme"
            android:text="@string/member_edit_toggle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/colorLayout"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/colorIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="9dp"
            android:paddingRight="5dp"
            android:src="@drawable/ic_palette_grey_24dp" />

        <TextView
            android:id="@+id/editMemberColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:text="@string/member_edit_color" />

        <Button
            android:id="@+id/editMemberColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_edit_white_24dp" />

    </LinearLayout>

    <Button
        android:id="@+id/editMemberDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_delete_white_24dp"
        android:drawablePadding="@dimen/spacer_1x"
        android:text="@string/member_edit_delete" />

    <TextView
        android:id="@+id/editMemberDeleteHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        tools:text="@string/member_edit_delete_cannot_delete" />

</LinearLayout>
